Update 2nd quarter e port.html

--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -2,6 +2,9 @@
 <head>
     <title>E-Portfolio for ICT-9</title>
     <link rel="stylesheet" href="e-port wow.css" type="text/css">
+    <style> 
+        body{background-image: url(black.jpg);}
+    </style>
 </head>
 <body>
     <header>
@@ -102,8 +105,6 @@
                 <source src="My 13th Birthday.mp4" type="video/mp4">
             </video>
             <p>Celebrating my 13th birthday.</p>
-            <a href="https://justinbiaco123.github.io/1st-day-of-Class/My%20First%20Day%20of%   20Class.html"target="blank"> My 1st day of class experience </a> <br/>
-            <p> The link above will show you my experience during the 1st day of class. </p>
             <br/> <br/> <br/> <br/>
             <h1 align="center"> THE END </h1>
 
