Update 2nd quarter e port.html

--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -3,7 +3,7 @@
     <title>E-Portfolio for ICT-9</title>
     <link rel="stylesheet" href="e-port wow.css" type="text/css">
     <style> 
-        body{background-image: url(black.jpg);}
+        body{background-image: url(black.jpg); background-size: cover;}        
     </style>
 </head>
 <body>
