--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -165,7 +165,7 @@
 
         <div id="section8" class="section">
             <h2>You have reached the end of my E-Portfolio, Traveler. You may now rest. Thank you!</h2>
-            <p class="centered">
+            <p class="centered" align="center">
                 <img src="Rest.jpg" alt="Rest" width="900" height="900">
             </p>
             <audio controls>
