Update 2nd quarter e port.html

--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -7,6 +7,9 @@
     </style>
 </head>
 <body>
+    <audio autoplay loop style="display:none;">
+    <source src="lobby-classic-game.mp3" type="audio/mp3">
+    </audio>
     <header>
         <h1 class="main-title">WELCOME TO MY E-PORTFOLIO</h1>
     </header>
