Update 2nd quarter e port.html

--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -7,9 +7,11 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-    <source src="lobby-classic-game.mp3" type="audio/mp3">
+    <audio autoplay loop style="display:none;">
+    <source src="https://raw.githubusercontent.com/JustinBiaco123/E-Portfolio-ICT-2nd-Quarter-/main/lobby-classic-game.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
     </audio>
+    
     <header>
         <h1 class="main-title">WELCOME TO MY E-PORTFOLIO</h1>
     </header>
