--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -7,7 +7,7 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop style="display:none;">
+    <audio autoplay loop>
     <source src="https://raw.githubusercontent.com/JustinBiaco123/E-Portfolio-ICT-2nd-Quarter-/main/lobby-classic-game.mp3" type="audio/mp3">
     Your browser does not support the audio element.
     </audio>
