--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -7,10 +7,6 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-    <source src="https://raw.githubusercontent.com/JustinBiaco123/E-Portfolio-ICT-2nd-Quarter-/main/lobby-classic-game.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-    </audio>
     
     <header>
         <h1 class="main-title">WELCOME TO MY E-PORTFOLIO</h1>
@@ -178,5 +174,10 @@
             </audio>
         </div>
     </div>
+    
+    <audio autoplay loop>
+    <source src="lobby-classic-game.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
