--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -176,7 +176,7 @@
     </div>
     
     <audio autoplay loop>
-    <source src="lobby-classic-game.mp3" type="audio/mp3">
+    <source src="lobby-classic-game.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
     </audio>
 </body>
