--- a/2nd quarter e port.html
+++ b/2nd quarter e port.html
@@ -176,8 +176,6 @@
     </div>
     
     <audio autoplay loop>
-    <source src="lobby-classic-game.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-    </audio>
+    <source src="lobby-classic-game.mp3">
 </body>
 </html>
